2009-07-12  vadim  <vadim@vk.crocodile.org>

	* printerStream.cpp (printerStream::printQTable): fix bug
	#2807724: "Print out FWB still not ok". Taking into account hidden
	rable rows associated with rule groups while printing rule sets.
	Before this fix some rules disappeared between pages in the
	printout.

2009-07-11  vadim  <vadim@vk.crocodile.org>

	* PrintingController.cpp (PrintingController::printRuleSet): bug
	#2807724: "Print out FWB still not ok". Rule groups were always
	printed expanded, even if they were collapsed by the user in the
	GUI.

	* OSConfigurator_openbsd.cpp (processFirewallOptions): fixed bug
	#2820162 "Bad sysctl name for OpenBSD pf" - the sysctl argument
	for IPv6 forwarding was incorrect.

	* AddressRange.h (libfwbuilder): fixed bug #2820152: "Address
	ranges and other such need IPv4/v6 typing". AddressRange object
	should be recognized and removed from the rule if it is used in
	ipv6 rule set. To do this, add virtual method
	hasInetAddress() (should return true) to indicate that this object
	has an address. This works since virtual method getAddressPtr()
	has been implemented anyway.

	* VERSION (VERSION): started v3.0.6

2009-06-17  vadim  <vadim@vk.crocodile.org>

	* v3.0.5 released

2009-06-11  vadim  <vadim@vk.crocodile.org>

	* PolicyCompiler_iosacl_writers.cpp (PrintRule::_printRule):
	implemented feature request #1778536: "IOSACL - remark command".
	This adds support for the "remark" command in generated IOS
	ACL configuration. Controlled by the checkbox "Add ACL remarks"
	in the "Script" tab of the firewall object settings dialog.

2009-06-09  vadim  <vadim@vk.crocodile.org>

	* NATCompiler_pf_writers.cpp (PrintRule::_printSrcPort): fixed bug
	#2803702 "NAT rule with source port range in TSrv is broken for
	PF".  NAT rules matching source port ranges and translating source
	port ranges should be possible.

	* NATCompiler.cpp (classifyNATRule::processNext): (change in