@@ -1,3 +1,10 @@
+2009-07-13  vadim  <vadim@vk.crocodile.org>
+
+	* ACL.cpp (ciscoACL::addRemark): fixed bug #1778536 "IOSACL -
+	remark command". Remarks now include rule comments; if comment
+	consists of several lines, each line is added using separate
+	remark statement. This works for both IOS ACL and PIX platforms.
+
 2009-07-12  vadim  <vadim@vk.crocodile.org>
 
 	* printerStream.cpp (printerStream::printQTable): fix bug
